Изменения: 1.Служебному классу Managers прописал приватный конструктор. 2.В InMemoryHistoryManager изменил List на LinkedList. 3.В InMemoryTaskManager переменные объявл как map(интерфейс). 4.Добавил интерфейсы в методы.